Implemented logout token